--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<p>git status</p>
 	<p>git diff</p>
 	<p>git commit --amend</p>
-	<p>git merge</P>
+	<p>git merge</p>
+	<p>コンフリクト</p>
 </body>
 </html>
